<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".frag.MineFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/view7"
                android:layout_width="wrap_content"
                android:layout_height="7dp"
                android:layout_marginTop="10dp"
                android:background="@color/gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/myArticle" />

            <LinearLayout
                android:id="@+id/myScore"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline9"
                app:layout_constraintTop_toTopOf="@+id/guideline10">



                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableStart="@android:mipmap/sym_def_app_icon"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:text="@string/myScore" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/currentScore" />
                <TextView
                    android:id="@+id/currentScore"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:text="@string/zero"
                    android:textColor="@color/deep_red"
                    android:layout_gravity="center_vertical"
                    android:gravity="end"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:contentDescription="@string/imgDes"
                    app:srcCompat="@mipmap/right"
                    android:src="@mipmap/right"/>
            </LinearLayout>

            <TextView
                android:id="@+id/tvId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:text="@string/id"
                app:layout_constraintBottom_toBottomOf="@+id/tvLogin"
                app:layout_constraintStart_toStartOf="@+id/tvLogin"
                app:layout_constraintTop_toTopOf="@+id/tvLogin"/>

            <ImageView
                android:id="@+id/ivHead"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/imgDes"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <View
                android:id="@+id/view5"
                android:layout_width="wrap_content"
                android:layout_height="7dp"
                android:layout_marginTop="20dp"
                android:background="@color/gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline7" />

            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/login"
                app:layout_constraintStart_toEndOf="@+id/ivHead"
                app:layout_constraintTop_toTopOf="parent"
                android:clickable="true"
                android:focusable="true"/>

            <TextView
                android:id="@+id/tvFootPrint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="88dp"
                android:gravity="center"
                android:text="@string/zero"
                app:layout_constraintBottom_toTopOf="@+id/textView7"
                app:layout_constraintStart_toStartOf="@+id/guideline9"
                app:layout_constraintTop_toTopOf="@+id/guideline8"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/footPrint"
                app:layout_constraintBottom_toTopOf="@+id/guideline7"
                app:layout_constraintEnd_toStartOf="@+id/textView9"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/ivHead"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView9"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tvRank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="120dp"
                android:text="@string/zero"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline8" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rank"
                app:layout_constraintBottom_toTopOf="@+id/guideline7"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView7" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.23" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.1751026" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.12" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.31" />

            <LinearLayout
                android:id="@+id/myCollect"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/guideline9"
                app:layout_constraintTop_toBottomOf="@+id/myScore">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableStart="@android:mipmap/sym_def_app_icon"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:text="@string/myCollect" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="center" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:contentDescription="@string/imgDes"
                    app:srcCompat="@mipmap/right"
                    android:src="@mipmap/right"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/myArticle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/guideline9"
                app:layout_constraintTop_toBottomOf="@+id/myCollect">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableStart="@android:mipmap/sym_def_app_icon"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:text="@string/myArticle" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="center" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:contentDescription="@string/imgDes"
                    app:srcCompat="@mipmap/right"
                    android:src="@mipmap/right"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/webSite"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/guideline9"
                app:layout_constraintTop_toBottomOf="@+id/view7">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableStart="@android:mipmap/sym_def_app_icon"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:text="@string/webSite" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="center" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:contentDescription="@string/imgDes"
                    app:srcCompat="@mipmap/right"
                    android:src="@mipmap/right"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/joy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/guideline9"
                app:layout_constraintTop_toBottomOf="@+id/webSite">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableStart="@android:mipmap/sym_def_app_icon"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:text="@string/joy" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="center" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:contentDescription="@string/imgDes"
                    app:srcCompat="@mipmap/right"
                    android:src="@mipmap/right"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/setting"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/guideline9"
                app:layout_constraintTop_toBottomOf="@+id/joy">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableStart="@android:mipmap/sym_def_app_icon"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:text="@string/setting" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="center" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:contentDescription="@string/imgDes"
                    app:srcCompat="@mipmap/right"
                    android:src="@mipmap/right"/>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>